# magneto

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: specs.md
src/magneto/: app.py  utils.py
src/magneto/api/: yts.py
src/magneto/ui/: column.py  genre_modal.py  layout.py  layout.tcss  movie_details.py  movie_item.py  movie_list.py  search_modal.py  style.tcss  torrent_item.py  torrent_modal.py
src/ui/: layout.py  layout.tcss
