[project]
name = "magneto"
version = "0.1.0"
description = ""
authors = [
    {name = "Imanuel Febie",email = "tuffgniuz.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "textual (>=8.0.0,<9.0.0)"
]

[tool.poetry]
packages = [{include = "magneto", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
